--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -29,7 +29,7 @@
               <a href="/view" class="" ng-class='{active: isActive("view")}' data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View Employee </a>
             </li>-->
             <li class="menu-item dropdown">
-              <a href="/list" class="" ng-class='{active: isActive("list")}' data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">List of Employees </a>   
+              <a href="/list" class="" ng-class='{active: isActive("list") || isActive("")}' data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">List of Employees </a>   
             </li>
           </ul>
       </div>
